[package]
name = "pingoo"
version = "0.14.2"
edition = "2024"

[[bin]]
name = "pingoo"
path = "pingoo/main.rs"

# See the link below for more information and the default profiles
# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1


# These settings should improve compile time (link time) during dev by avoiding to link and include debugger data.
# It seems to be especially faster on machines with slow disks.
[profile.dev]
debug = 0
strip = "debuginfo"

[dependencies]
docker = { path = "./docker" }
jwt = { path = "./jwt" }
captcha = { path = "./captcha" }
rules = { path = "./rules" }

async-trait = { workspace = true }
aws-lc-rs = { workspace = true }
base64 = { workspace = true }
bel = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["clock", "oldtime", "serde", "std" ] }
cookie = { workspace = true, features = ["percent-encode"] }
csv = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
heapless = { workspace = true, features = ["serde"] }
hex = { workspace = true }
hickory-resolver = { workspace = true, features = ["https-aws-lc-rs", "webpki-roots", "tls-aws-lc-rs"] }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-rustls = { workspace = true, features = ["http2", "http1"] }
hyper-util = { workspace = true, features = ["full"] }
indexmap = { workspace = true, features = ["serde"] }
instant-acme = { workspace = true }
ipnetwork = { workspace = true, features = ["serde"] }
maxminddb = { workspace = true }
mimalloc = { workspace = true }
mime_guess = { workspace = true }
moka = { workspace = true, features = ["future"] }
rand = { workspace = true }
rcgen = { workspace = true, default-features = false, features = ["crypto", "aws_lc_rs", "pem"]}
# disable TLS 1.2 support
rustls = { workspace = true, default-features = false, features = ["aws_lc_rs", "logging", "prefer-post-quantum", "std"] }
rustls-pemfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
# disable TLS 1.2 support
tokio-rustls = { workspace = true, default-features = false, features = ["aws_lc_rs", "logging"] }
tokio-util = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false, features =  ["smallvec", "fmt", "tracing-log", "std", "env-filter", "json"] }
url = { workspace = true }
uuid = { workspace = true }
wildcard = { workspace = true }
x509-parser = { workspace = true }
zeroize = { workspace = true, features = ["simd", "derive"] }
zstd = { workspace = true }
urlencoding = { workspace = true }



[workspace]
resolver = "2"

members = [
    ".",
    "captcha",
    "docker",
    "jwt",

    "pong",
]


[workspace.dependencies]
base64 = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
bel = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
embed = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
hex = { git = "https://github.com/pingooio/stdx-rs", branch = "main", features = ["serde"] }
ipnetwork = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
maxminddb = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
mime_guess = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
serde_urlencoded = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
serde_yaml = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
uuid = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }


async-trait = "0.1"
aws-lc-rs = "1"
bytes = "1"
chrono = "0.4"
cookie = { version = "0.18" }
csv = "1"
dashmap = "6"
futures = "0.3"
heapless = "0.9"
hickory-resolver = "0.25"
http = "1"
http-body-util = "0.1"
hyper = "1"
hyper-rustls = "0.27"
hyper-util = "0.1"
indexmap = "2"
instant-acme = { git = "https://github.com/djc/instant-acme", branch = "main" }
mimalloc = "0.1"
moka = "0.12"
rand = "0.9"
rcgen = { version = "0.14", default-features = false}
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2"
serde = "1"
serde_json = "1"
socket2 = "0.6"
thiserror = "2"
tokio = "1"
tokio-rustls = { version = "0.26", default-features = false }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
url = { version = "2" }
wildcard = "0.3"
x509-parser = "0.18"
zeroize = "1"
zstd = "0.13"
urlencoding = "2.1.3"


# countries = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
#
#
# tld = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
# jsonwebtoken = "9"
# mime = "0.3"
# regex = "1"
# tokio-stream = "0.1"
# ed25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "246723eefec35fdc8eb51c8c54a50c1c682e257d", features = ["pkcs8", "pem", "rand_core"] }
# p256 = "0.13"
# zeroize = "1"


[patch.crates-io]
base64 = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
cfg-if = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
form_urlencoded = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
hex = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
httpdate = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
ipnetwork = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
itoa = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
mime_guess = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
percent-encoding = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
pin-project-lite = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
ryu = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
serde_urlencoded = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
uuid = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }


thiserror = { git = "https://github.com/dtolnay/thiserror", rev = "d2c492b5498a0134abcc1677101bec876fe0621a" }
thiserror-impl =  { git = "https://github.com/dtolnay/thiserror", rev = "d2c492b5498a0134abcc1677101bec876fe0621a" }
async-trait = { git = "https://github.com/dtolnay/async-trait", rev = "fbd86047d853c78d0c646fb947e39b73d53ead0d" }
serde = { git = "https://github.com/serde-rs/serde", rev = "a866b336f14aa57a07f0d0be9f8762746e64ecb4" }
serde_core = { git = "https://github.com/serde-rs/serde", rev = "a866b336f14aa57a07f0d0be9f8762746e64ecb4" }
serde_derive = { git = "https://github.com/serde-rs/serde", rev = "a866b336f14aa57a07f0d0be9f8762746e64ecb4" }
serde_json = { git = "https://github.com/serde-rs/json", rev = "b9cafe2626e20703cb24620af6bbad6dbd3b807f" }
