[package]
name = "jwt"
version = "0.1.0"
edition = "2024"

[lib]
path = "jwt.rs"

[dependencies]
aws-lc-rs = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
