[package]
name = "pingoo"
version = "0.13.3"
edition = "2024"

[[bin]]
name = "pingoo"
path = "main.rs"


[dependencies]
docker = { path = "../docker" }
jwt = { path = "../jwt" }
captcha = { path = "../captcha" }
rules = { path = "../rules" }

async-trait = { workspace = true }
aws-lc-rs = { workspace = true }
base64 = { workspace = true }
bel = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["clock", "oldtime", "serde", "std" ] }
cookie = { workspace = true, features = ["percent-encode"] }
csv = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
heapless = { workspace = true, features = ["serde"] }
hex = { workspace = true }
hickory-resolver = { workspace = true, features = ["https-aws-lc-rs", "webpki-roots", "tls-aws-lc-rs"] }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-rustls = { workspace = true, features = ["http2", "http1"] }
hyper-util = { workspace = true, features = ["full"] }
indexmap = { workspace = true, features = ["serde"] }
instant-acme = { workspace = true }
ipnetwork = { workspace = true, features = ["serde"] }
maxminddb = { workspace = true }
mimalloc = { workspace = true }
mime_guess = { workspace = true }
moka = { workspace = true, features = ["future"] }
rand = { workspace = true }
rcgen = { workspace = true, default-features = false, features = ["crypto", "aws_lc_rs", "pem"]}
# disable TLS 1.2 support
rustls = { workspace = true, default-features = false, features = ["aws_lc_rs", "logging", "prefer-post-quantum", "std"] }
rustls-pemfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
# disable TLS 1.2 support
tokio-rustls = { workspace = true, default-features = false, features = ["aws_lc_rs", "logging"] }
tokio-util = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false, features =  ["smallvec", "fmt", "tracing-log", "std", "env-filter", "json"] }
url = { workspace = true }
uuid = { workspace = true }
wildcard = { workspace = true }
x509-parser = { workspace = true }
zeroize = { workspace = true, features = ["simd", "derive"] }
zstd = { workspace = true }
